[package]
name = "ggez_voxel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.1"
mint = "0.5.9"
wgpu = "0.14"
glam = { version = "0.21.3", features = ["mint"] }
crevice = "0.11"
bytemuck = { version = "1.12", features = ["derive"] }
# vinox_voxel = {path = "../vinox_voxel", default_features = false, features = ["geometry", "block", "scripting", "render"]}
# vinox_voxel = {git = "https://github.com/vixeliz/vinox_voxel", default_features = false, features = ["geometry", "block", "scripting"]}
